--- a/src/boundary/FormProjection.form
+++ b/src/boundary/FormProjection.form
@@ -29,9 +29,7 @@
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Group type="102" attributes="0">
                               <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace max="32767" attributes="0"/>
-                              <Component id="movieCBX" min="-2" pref="176" max="-2" attributes="0"/>
-                              <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
+                              <EmptySpace min="29" pref="284" max="32767" attributes="0"/>
                           </Group>
                           <Group type="102" attributes="0">
                               <Group type="103" groupAlignment="0" attributes="0">
@@ -52,6 +50,7 @@
                                           <Component id="dateFLD" min="-2" pref="176" max="-2" attributes="0"/>
                                           <Component id="screenCBX" min="-2" pref="176" max="-2" attributes="0"/>
                                           <Component id="timeFLD" min="-2" pref="176" max="-2" attributes="0"/>
+                                          <Component id="movieCBX" alignment="0" min="-2" pref="176" max="-2" attributes="0"/>
                                       </Group>
                                   </Group>
                               </Group>
@@ -102,7 +101,7 @@
                   <Component id="is3DCHK" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="is4DCHK" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="32" max="32767" attributes="0"/>
+              <EmptySpace pref="49" max="32767" attributes="0"/>
               <Component id="submitBTN" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="55" max="-2" attributes="0"/>
           </Group>
