--- a/src/boundary/mainFrame.form
+++ b/src/boundary/mainFrame.form
@@ -53,7 +53,7 @@
         <Component class="javax.swing.JButton" name="jButton1">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/entity/pagina-de-inicio.png"/>
+              <Image iconType="3" name="/Icons/pagina-de-inicio.png"/>
             </Property>
             <Property name="focusable" type="boolean" value="false"/>
             <Property name="horizontalTextPosition" type="int" value="0"/>
