--- a/src/boundary/FormClient.form
+++ b/src/boundary/FormClient.form
@@ -25,7 +25,7 @@
               <Group type="103" groupAlignment="1" attributes="0">
                   <Group type="102" attributes="0">
                       <EmptySpace min="-2" pref="344" max="-2" attributes="0"/>
-                      <Component id="jLabel1" pref="62" max="32767" attributes="0"/>
+                      <Component id="jLabel1" pref="61" max="32767" attributes="0"/>
                       <EmptySpace min="-2" pref="84" max="-2" attributes="0"/>
                       <Component id="submitBTN" min="-2" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="8" max="-2" attributes="0"/>
@@ -154,7 +154,7 @@
     <Component class="javax.swing.JButton" name="submitBTN">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/entity/comprobado.png"/>
+          <Image iconType="3" name="/Icons/comprobado.png"/>
         </Property>
       </Properties>
       <Events>
