--- a/src/boundary/FormMovie.form
+++ b/src/boundary/FormMovie.form
@@ -247,7 +247,7 @@
     <Component class="javax.swing.JButton" name="crear">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/entity/comprobado.png"/>
+          <Image iconType="3" name="/Icons/comprobado.png"/>
         </Property>
         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
           <Border info="org.netbeans.modules.form.compat2.border.EmptyBorderInfo">
