--- a/src/boundary/FormScreen.form
+++ b/src/boundary/FormScreen.form
@@ -152,7 +152,7 @@
               </Group>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Component id="submitBTN" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="124" max="32767" attributes="0"/>
+              <EmptySpace pref="119" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -208,7 +208,7 @@
     <Component class="javax.swing.JButton" name="submitBTN">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/entity/comprobado.png"/>
+          <Image iconType="3" name="/Icons/comprobado.png"/>
         </Property>
       </Properties>
       <Events>
